# khivedev

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.khive/agents/auditor/.claude/: settings.json
.khive/agents/innovator/.claude/: settings.json
.khive/agents/theorist/.claude/: settings.json
.khive/workspaces/agents/analyst/.claude/: CLAUDE.md  settings.json
.khive/workspaces/agents/architect/.claude/: CLAUDE.md  settings.json
infra/claude_proxy/: claude_code_proxy.py  run_w_claude_code_proxy.ipynb
libs/khive_claude/: CLAUDE_CODE_INTEGRATION_GUIDE.md  README.md  pyproject.toml  test_claude_integration.py
libs/khive_claude/docs/: API.md  DASHBOARD.md  HOOKS.md
libs/khive_claude/src/khive_claude/: __init__.py  cli.py
libs/khive_claude/src/khive_claude/frontend/: __init__.py  realtime_server.py  streamlit_dashboard.py
libs/khive_claude/src/khive_claude/hooks/: __init__.py  hook_event.py  notification.py  post_agent_spawn.py  post_command.py  post_edit.py  pre_agent_spawn.py  pre_command.py  pre_edit.py  prompt_submitted.py
live-stream/2025_07_29/: 001_building_isolated_cc_workspace.ipynb  ARTIFACTS_INDEX.md  FLOW0_SYNTHESIS_REPORT.md  README.md  flow0.py  memory_mcp_flow0_direct.py  utils.py
live-stream/2025_07_29/memory_mcp_flow0/analyst/: decision_trees_operational_flows.md  user_journey_maps.md
live-stream/2025_07_29/memory_mcp_flow0/researcher/: PERFORMANCE_BASELINE_REPORT.md  benchmark_demo.py  memory_mcp_benchmark_runner.py  memory_performance_benchmark.py  requirements.txt
(+18 files in other folders)
